deletes styled scrollbar in the visual designer that's no longer used [#68594456]

--- a/app/static/scss/base.scss
+++ b/app/static/scss/base.scss
@@ -168,39 +168,7 @@ input[type="checkbox"]:checked + span:before {
   content: "\f046"; /* check */
 }
 
-/* Let's get this scrollbar started */
-::-webkit-scrollbar {
-    width: 12px;
-}
-
-/* Track */
-::-webkit-scrollbar-track {
-    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
-}
-
-/* Handle */
-::-webkit-scrollbar-thumb {
-    -webkit-border-radius: 10px;
-    border-radius: 10px;
-    background-color: $light-gray;
-}
-::-webkit-scrollbar-thumb:window-inactive {
-  background: $dark-gray;
-}
-
-.block {
-  display: block;
-}
-
-.white-container {
-  background-color: $white;
-}
-
-.beige-container {
-  background-color: $light-beige;
-  border: 20px solid $dark-beige;
-  position: relative;
-}
+.block { display: block; }
 
 .checkbox { display: inline; }
 
